test: add permit and burn test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,8 @@ jobs:
       matrix:
         template:
         - Basic
+        - Burnable
+        - Permitable
         - Mintable
     steps:
     - uses: actions/checkout@v2
