--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,9 @@ jobs:
         cd ${{ matrix.template }}
         ape compile --size
     - name: Run tests
-      with: 
+      env:
+        ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
+        WEB3_ALCHEMY_PROJECT_ID: ${{ secrets.WEB3_ALCHEMY_PROJECT_ID }} 
       run: |
         cd ${{ matrix.template }}
         ape test -s
