--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
         - Burnable
         - Permitable
         - Mintable
-        - ERC4626
+        - ERC4626Project
     steps:
     - uses: actions/checkout@v2
     - uses: ApeWorX/github-action@v1
